DP-15011: fix sticky toc and jump links position

--- a/assets/scss/02-molecules/_sticky-nav.scss
+++ b/assets/scss/02-molecules/_sticky-nav.scss
@@ -53,7 +53,7 @@
 
   &[data-sticky='middle'] {
     position: fixed;
-      top: 40px;
+      top: 0px;
 
     .translated-rtl &,
     .translated-ltr & {
